# game_of_life

./: CMakeLists.txt  findmosquitto.cmake  utilities.cmake
.github/workflows/: c-cpp.yml
cmake/: FindClangTidy.cmake  FindTaoJson.cmake  utilities.cmake
core/: CMakeLists.txt
core/include/core/: cell.h  cell_factory.h  configuration.h  engine.h  matrix.h  non-copyable-base.h  publishable.h  rules.h  state_publisher.h  state_publisher_abstract.h  state_publisher_cell.h
core/src/: cell_factory.cpp  cell_publisher.cpp  cell_publisher.h  cell_subscriber.cpp  cell_subscriber.h  configuration.cpp  engine.cpp  matrix.cpp  rules.cpp  state_publisher_cell.cpp
core/test/: CMakeLists.txt  test_cell_publisher.cpp  test_configuration.cpp  test_engine.cpp  test_matrix.cpp  test_rules.cpp  test_state_dispatcher.cpp
core/test/mock/: mock_cell.h  mock_state_dispatcher.h  mock_state_dispatcher_abstract.h
game/: CMakeLists.txt
game/include/game/: game_of_life.h
game/src/: game_of_life.cpp  main.cpp
game/test/: CMakeLists.txt  test_game_of_life.cpp
mqtt/: CMakeLists.txt
mqtt/include/mqtt/: callback.h  connection.h  message.h  mosquitto_mqtt_client.h  mqtt_client.h  topic.h
mqtt/src/: mosquitto_mqtt_client.cpp  mqtt_publish_options.h
mqtt/test/: CMakeLists.txt  test_mqtt.cpp
project/: CMakeLists.txt
project/game_of_life/: CMakeLists.txt  InstallRedboltz.cmake
project/game_of_life/src/: algorithm.h  cell.cpp  cell.h  engine.cpp  engine.h  game_engine.cpp  game_engine.h  game_of_life.cpp  game_of_life.h  main.cpp  markable.h  matrix.cpp  matrix.h  message.h  mosquitto_mqtt_client.cpp  mosquitto_mqtt_client.h  mqtt_client.cpp  mqtt_client.h  mqtt_publish_options.cpp  mqtt_publish_options.h  non_copyable_base.h  publishable.h  publishable_with_context.h  rules.cpp  rules.h  sink.h  state_dispatcher.h  state_dispatcher_impl.cpp  state_dispatcher_impl.h
project/game_of_life/test/: CMakeLists.txt  test_cell.cpp  test_engine.cpp  test_game_engine.cpp  test_game_of_life.cpp  test_matrix.cpp  test_mqtt.cpp  test_mqtt_subscribe_options.cpp  test_rules.cpp  test_state_dispatcher.cpp
project/game_of_life/test/mock/: mock_state_dispatcher.h
tools/: Dockerfile
utils/: CMakeLists.txt
utils/src/: dummy.cpp  dummy.h
viewer/: CMakeLists.txt
viewer/src/: main.cpp  startup.cpp  startup.h
viewer/src/model/: game.cpp  game.h
viewer/src/view/: cellview.cpp  cellview.h  cellview.ui  gameview.cpp  gameview.h  gameview.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  stats.cpp  stats.h  stats.ui
viewer/test/: CMakeLists.txt  game_test.cpp
